# sportbot

./: .coverage  README.rst  code-format.sh  full-check.sh  gen-deps.sh  gen-doc.sh  help.rst  install-deps.sh  linting.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
sportbot/: __init__.py  bell.py  bot.py  boxing.py  exercice.py  exercices.py  exercise.py  helpers.py  main.py  options.py  playsound.py  rest.py  screen.py  sequence.py  sequences.py  sound.py  tag.py  training.py  waiting.py
sportbot/commands/: boxing.py  exercice.py  exercise.py  sequence.py  training.py
sportbot/exercises/: __init__.py  boxing.py  exercise.py  helpers.py  sequence.py  tag.py  training.py  waiting.py
tests/: conftest.py  test_cli.py
