[tool.poetry]
name = "sportbot"
version = "0.1.0"
description = ""
authors = ["Adrien Pensart <adrien.pensart@corp.ovh.com>"]

[tool.poetry.dependencies]
python = "^3.8"
asciimatics = "^1.13.0"
colorama = "^0.4.4"
python-vlc = "^3.0.12118"
gTTS = "^2.2.2"
python-slugify = "^4.0.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
sportbot = 'sportbot.main:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
